# photo-scan

./: .gitignore  CMakeLists.txt  package.xml
cmake/: FindGDAL.cmake
include/photo_scan/: photo_scan.h  photo_scan_helper.h
launch/: photo_scan.launch
scripts/: config_cor.ini  config_single.ini  multispectral.py  multispectral.py.original  single_band.py
scripts/configs/: high.yaml  low.yaml  lowest.yaml  medium.yaml  opt.yaml
src/: photo_scan.cpp
