<?xml version="1.0"?>
<package>
  <name>photo_scan</name>
  <version>0.0.1</version>
  <description>The geo_tagger package</description>

  <maintainer email="y.khedar@tu-bs.de">Yogesh Khedar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend> 
  <build_depend>pcl_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>custom_msgs</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>


</package>
